# pgnes

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: config.cpp  config.h  nes.h
src/driver/: logger.h  mainwindow.cpp  mainwindow.h  message_window.cpp  message_window.h
src/test/: CMakeLists.txt  config_test.cpp  message_log_test.cpp
src/utils/logger/: abstract_logger.h  file_logger.h  logger_facatory.h  multi_logger.h  ostringstream_logger.h  stderr_logger.h  stdout_logger.h
